--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ui",
+  "name": "crm-ng",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -30,12 +30,11 @@
     "angular-font-awesome": "^3.1.2",
     "angular-notifier": "4.1.1",
     "chart.js": "^2.8.0",
-    "feather-icons": "^4.21.0",
+    "feather-icons": "^4.22.1",
     "font-awesome": "^4.7.0",
     "moment": "*",
     "moment-timezone": "^0.5.23",
-    "ng2-completer": "*",
-    "ng2-smart-table": "*",
+    "ng2-completer": "^3.0.2",
     "ngx-color-picker": "^6.8.0",
     "ngx-mask": "^6.5.18",
     "ngx-order-pipe": "^2.0.2",
@@ -44,19 +43,20 @@
     "primeng": "6.1.0",
     "rxjs": "^6.5.1",
     "rxjs-compat": "^6.5.1",
+    "tslib": "^1.10.0",
     "zone.js": "^0.8.26",
     "zoom-vanilla.js": "^2.0.5"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "~6.2.4",
+    "@angular/cli": "^8.0.4",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
+    "@types/chart.js": "^2.7.52",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
-    "electron": "^5.0.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
