--- a/package.json
+++ b/package.json
@@ -1,71 +1,71 @@
 {
-  "name": "crm-ng",
+  "name": "ui2",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --port 8081 --disableHostCheck true",
+    "start": "ng serve --host 0.0.0.0 --port 8080 --disableHostCheck true",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "electron": "electron .",
-    "e": "ng serve --host 0.0.0.0 --port 8081 --disableHostCheck true && electron ."
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "*",
-    "@angular/animations": "*",
-    "@angular/common": "*",
-    "@angular/compiler": "*",
-    "@angular/forms": "*",
-    "@angular/http": "*",
-    "@angular/platform-browser": "*",
-    "@angular/platform-browser-dynamic": "*",
-    "@angular/router": "*",
-    "@ng-bootstrap/ng-bootstrap": "^3.3.1",
-    "@ngx-translate/core": "*",
+    "@agm/core": "^1.0.0-beta.6",
+    "@angular/animations": "~8.0.1",
+    "@angular/cdk": "^8.0.1",
+    "@angular/common": "~8.0.1",
+    "@angular/compiler": "~8.0.1",
+    "@angular/core": "~8.0.1",
+    "@angular/forms": "~8.0.1",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^8.0.1",
+    "@angular/platform-browser": "~8.0.1",
+    "@angular/platform-browser-dynamic": "~8.0.1",
+    "@angular/router": "~8.0.1",
+    "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "*",
     "@types/googlemaps": "^3.30.16",
     "angular-font-awesome": "^3.1.2",
     "angular-notifier": "4.1.1",
     "chart.js": "^2.8.0",
-    "feather-icons": "^4.22.1",
+    "feather-icons": "^4.21.0",
     "font-awesome": "^4.7.0",
     "moment": "*",
     "moment-timezone": "^0.5.23",
-    "ng2-completer": "^3.0.2",
+    "ng2-completer": "*",
+    "ng2-smart-table": "^1.5.0",
     "ngx-color-picker": "^6.8.0",
     "ngx-mask": "^6.5.18",
     "ngx-order-pipe": "^2.0.2",
     "ngx-smart-modal": "^7.1.1",
     "popper.js": "^1.14.5",
     "primeng": "6.1.0",
-    "rxjs": "^6.5.1",
+    "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.1",
-    "tslib": "^1.10.0",
-    "zone.js": "^0.8.26",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1",
     "zoom-vanilla.js": "^2.0.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.8.0",
-    "@angular/cli": "^8.0.4",
-    "@angular/compiler-cli": "^6.1.0",
-    "@angular/language-service": "^6.1.0",
-    "@types/chart.js": "^2.7.52",
-    "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/cli": "~8.0.4",
+    "@angular/compiler-cli": "~8.0.1",
+    "@angular/language-service": "~8.0.1",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.3.0",
-    "jasmine-core": "~2.99.1",
+    "@types/jasmine": "~3.3.8",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3"
   }
 }
