--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@kolkov/angular-editor": "^1.0.0-beta.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "*",
     "@types/googlemaps": "^3.30.16",
@@ -39,6 +40,7 @@
     "ngx-mask": "^6.5.18",
     "ngx-order-pipe": "^2.0.2",
     "ngx-smart-modal": "^7.1.1",
+    "ngx-tree-dnd": "^2.6.0",
     "popper.js": "^1.14.5",
     "primeng": "6.1.0",
     "rxjs": "~6.4.0",
