--- a/angular.json
+++ b/angular.json
@@ -47,8 +47,9 @@
             "styles": [
               "node_modules/angular-notifier/styles.css",
               "node_modules/ngx-smart-modal/ngx-smart-modal.css",
-              "src/styles.css",
-              "node_modules/font-awesome/css/font-awesome.css"
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/ngx-tree-dnd/styles-tree-dnd.css",
+              "src/styles.css"
             ],
             "scripts": [
             ]
